--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,6 @@ clap = "2.34.0"
 serde = "1.0.140"
 serde_json = "1.0.82"
 etrace = "1.1.1"
+
+[package.metadata.rust-analyzer]
+rustc_private = true
